Add undo/redo to adding, removing, replacing, duplicating, moving and interactively creating fixtures